@@ -1,3 +1,8 @@
+2014-11-08 belangeo <belangeo@gmail.com>
+
+    * E-Pyo: Added Save As Template... menu item.
+    - rev 1263
+
 2014-11-02 belangeo <belangeo@gmail.com>
 
     * Fixed bug in Fader decreasing ramp.
